Add some gc options.