@@ -25,13 +25,20 @@ jvmopts () {
     #echo -XX:NewSize=15m
     #echo -XX:MaxNewSize=15m
     #echo -XX:+PrintTenuringDistribution
+    #echo -XX:+PrintHeapAtGC
+    #echo -XX:+PrintHeapAtGCExtended
 
     if [ "$HTTPGCTEST_COLLECTOR" = "g1" ]
     then
         echo -XX:+UseG1GC
         echo -XX:MaxGCPauseMillis=50
         echo -XX:GCPauseIntervalMillis=75
-        echo -XX:G1PrintRegionLivenessInfo=1000
+        echo -XX:+G1PrintParCleanupStats
+        echo -XX:G1PolicyVerbose=1
+        echo -XX:+PrintGCDetails
+        #echo -XX:G1PrintRegionLivenessInfo=5000
+        #echo -XX:+PrintHeapAtGC
+        #echo -XX:+PrintHeapAtGCExtended
         #echo -XX:+G1ParallelRSetUpdatingEnabled
         #echo -XX:+G1ParallelRSetScanningEnabled
     elif [ "$HTTPGCTEST_COLLECTOR" = "cms" ]
